--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.4",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
     "next": "latest",
