--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "latest",
-    "@types/react": "latest",
+    "@types/react": "^18.2.47",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "eslint": "latest",
